# medisync

./: .gitignore  Plan for blood bank.docx  README.md  Requirement.md  context.md  package-lock.json  package.json  spec.md  use_case.md
.claude/: settings.json
.claude/agents/: backend-engineer.md  debug-expert.md  frontend-ui-builder.md
.github/workflows/: azure-auth-probe.yml  terraform-apply.yml  terraform-plan.yml
docs/_archive/: context-aws.md
docs/ba/: README.md
docs/ba/01-user-registration/: brd.md  flows.md  fsd.md
docs/ba/_templates/: brd-template.md  flows-template.md  fsd-template.md
docs/runbooks/: 01-azure-account-bootstrap.md  02-azure-rbac.md  03-az-cli-and-tooling.md  04-cicd-oidc.md  05-terraform-scaffold.md  06-first-resource-cosmos.md  07-remote-state-backend.md  08-terraform-cicd.md  09-functions-eventgrid-deploy.md  10-entra-external-id.md
docs/runbooks/_archive/: 01-aws-account-bootstrap.md  02-iam-users.md
frontend/: .env.example  .gitignore  README.md  next.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  staticwebapp.config.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/inventory/: page.tsx
frontend/src/app/request/: page.tsx
frontend/src/app/status/: page.tsx
frontend/src/components/: Nav.tsx  StatusBadge.tsx
frontend/src/lib/: api.ts  auth.ts  types.ts
infra/: .terraform.lock.hcl  backend.tf  cosmos.tf  email.tf  eventgrid.tf  functions.tf  identity.tf  locals.tf  monitoring.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
infra/probe/: main.tf
scripts/: render-ba-diagrams.mjs  sync-shared.ps1
services/inventory/: README.md  function_app.py  local.settings.example.json  pyproject.toml  requirements.txt
services/inventory/app/: __init__.py  config.py  geo.py  models.py  repository.py  routes.py  subscriber.py  telemetry.py
services/inventory/tests/: test_geo.py  test_models.py
services/match/: .funcignore  README.md  function_app.py  host.json  local.settings.example.json  pyproject.toml  requirements.txt
services/match/app/: __init__.py  config.py  events.py  inventory_client.py  matching.py  models.py  publisher.py  repository.py  routes.py  saga.py  telemetry.py
services/match/tests/: test_events.py  test_matching.py  test_models.py
services/user/: README.md  function_app.py  local.settings.example.json  pyproject.toml  requirements.txt
services/user/app/: __init__.py  config.py  models.py  repository.py  routes.py  telemetry.py
services/user/tests/: test_models.py
