[project]
name = "medisync-match-service"
version = "0.1.0"
description = "MediSync match service — emergency matching Saga (Azure Durable Functions, Python v2)."
requires-python = ">=3.12,<3.13"
dependencies = [
    "azure-functions>=1.21.0",
    "azure-functions-durable>=1.2.9",
    "azure-cosmos>=4.9.0",
    "azure-identity>=1.19.0",
    "azure-eventgrid>=4.20.0",
    "azure-monitor-opentelemetry>=1.6.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[tool.uv]
# This is a deployable Function App, not an installable library.
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
